# marlin-agent-core

./: .bazelignore  .bazelrc  .devenv.flake.nix  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  Cargo.toml  Justfile  MODULE.bazel  README.org  REPO.bazel  development.md  devenv.nix  dynamic-rule
bazel/crate-universe/: BUILD.bazel  Cargo.toml  scenario_features.rs
build-support/marlin-deck-runtime-native-build/: Cargo.toml  build.rs
build-support/marlin-deck-runtime-native-build/src/: archive.rs  header.rs  lib.rs  script.rs  toolchain.rs
build-support/marlin-deck-runtime-native-build/tests/: unit_test.rs
build-support/marlin-gerbil-native-build/: Cargo.toml
build-support/marlin-gerbil-native-build/src/: archive.rs  discovery.rs  header.rs  lib.rs  script.rs  toolchain.rs
build-support/marlin-rust-project-harness-policy/: BUILD.bazel  Cargo.toml  build.rs
build-support/marlin-rust-project-harness-policy/src/: config.rs  dependency_topology.rs  evidence.rs  gate.rs  gerbil_runtime_assets.rs  improvement_queue.rs  lib.rs  package_evidence_graph.rs  quality_findings.rs  quality_gate.rs  scenario_benchmark.rs  verification_policy.rs  workspace_package_gate.rs
build-support/marlin-rust-project-harness-policy/tests/: unit_test.rs
crates/marlin-agent-core/: Cargo.toml
crates/marlin-agent-core/src/: hook_policy.rs  lib.rs  release.rs
crates/marlin-agent-core/tests/: unit_test.rs
crates/marlin-agent-environment/: Cargo.toml
crates/marlin-agent-environment/src/: activation.rs  import.rs  lib.rs  refresh.rs  resolver.rs  state_storage.rs  working_copy.rs
crates/marlin-agent-environment/tests/: unit_test.rs
crates/marlin-agent-harness/: Cargo.toml  README.md
crates/marlin-agent-harness-types/: Cargo.toml  build.rs
crates/marlin-agent-harness-types/src/: evidence.rs  intent_case.rs  lib.rs  runtime_repair.rs  scenario.rs
crates/marlin-agent-harness-types/tests/: unit_test.rs
crates/marlin-agent-harness/benches/: workspace_performance.rs
crates/marlin-agent-harness/src/: assertion.rs  evidence.rs  evidence_graph.rs  fakes.rs  gerbil_continuation.rs  graph.rs  intent_case_artifact.rs  intent_case_artifact_diff.rs  intent_case_artifact_error.rs  intent_case_artifact_manifest.rs  intent_case_artifact_model_events.rs  intent_case_artifact_policy_combination.rs  intent_case_artifact_policy_feedback.rs  intent_case_artifact_real_llm.rs  intent_case_artifact_receipt_header.rs  intent_case_artifact_replay.rs  intent_case_artifact_run_receipt.rs  intent_case_artifact_runtime_repair.rs  intent_case_artifact_side_effect_summary.rs  intent_case_artifact_test_receipts.rs  intent_case_observed_span.rs  lib.rs  performance.rs  release_visibility.rs  runtime.rs  trace.rs
crates/marlin-agent-harness/tests/: unit_test.rs
crates/marlin-agent-hooks/: Cargo.toml
crates/marlin-agent-hooks/benches/: dynamic_actions.rs
crates/marlin-agent-hooks/src/: config.rs  dispatcher.rs  dynamic_actions.rs  lib.rs
crates/marlin-agent-hooks/tests/: unit_test.rs
crates/marlin-agent-kernel/: Cargo.toml
crates/marlin-agent-kernel/benches/: loop_program_execution_shape.rs
crates/marlin-agent-kernel/src/: adapters.rs  controller.rs  driver.rs  lib.rs  loop_machine.rs  loop_program_controller.rs  loop_program_execution.rs  loop_program_handoff.rs  loop_program_handoff_executor.rs  loop_program_policy_matrix.rs  loop_program_side_effects.rs
crates/marlin-agent-kernel/tests/: unit_test.rs
crates/marlin-agent-policy-routing-native/: Cargo.toml  build.rs
crates/marlin-agent-policy-routing-native/benches/: allocation_shape.rs  linked_selector.rs
crates/marlin-agent-policy-routing-native/src/: lib.rs  linked.rs
crates/marlin-agent-policy-routing-native/tests/: unit_test.rs
crates/marlin-agent-protocol/: BUILD.bazel  Cargo.toml
crates/marlin-agent-protocol/src/: agent_flow.rs  agent_graph.rs  event.rs  evidence.rs  graph.rs  hook.rs  lib.rs  loop_policy_ir.rs  model_gateway.rs  model_route.rs  runtime_environment.rs  runtime_state_home.rs  scenario.rs  sub_agent.rs  trace.rs
crates/marlin-agent-protocol/tests/: unit_test.rs
crates/marlin-agent-route/: Cargo.toml
crates/marlin-agent-route/src/: http.rs  lib.rs
crates/marlin-agent-route/tests/: unit_test.rs
crates/marlin-agent-runtime/: Cargo.toml
crates/marlin-agent-runtime/src/: agent_graph.rs  graph_loop.rs  lib.rs  observability.rs  process.rs  resilience.rs  tokio_runtime.rs
crates/marlin-agent-runtime/tests/: unit_test.rs
crates/marlin-agent-sessions/: BUILD.bazel  Cargo.toml
crates/marlin-agent-sessions/src/: context.rs  id.rs  identity.rs  lib.rs  runtime.rs  storage.rs
crates/marlin-agent-sessions/tests/: unit_test.rs
crates/marlin-agent-storage/: BUILD.bazel  Cargo.toml  build.rs
crates/marlin-agent-storage/src/: lib.rs  memory.rs  records.rs  turso_backend.rs  turso_operations.rs  turso_schema.rs  turso_storage.rs
crates/marlin-agent-storage/tests/: db_crash_reopen_gate.rs  db_pressure_gate.rs  evidence_packet_gate.rs  ifc_policy_pack_storage_gate.rs  integration_test.rs  lean_proof_gate.rs  memory_topology_projection_gate.rs  org_memory_storage_gate.rs  schema_migration_gate.rs  session_storage_gate.rs  turso_sync_feature_gate.rs
crates/marlin-agent-stream/: Cargo.toml
crates/marlin-agent-stream/src/: chunk_gate.rs  event.rs  gateway.rs  lib.rs  litellm.rs  model_probe.rs  request.rs
crates/marlin-agent-stream/tests/: unit_test.rs
crates/marlin-agent-test-support/: Cargo.toml
crates/marlin-agent-test-support/src/: agent_graph_readiness.rs  graph_policy.rs  hook.rs  lib.rs  project_runtime_read_model.rs  replay.rs  runtime_environment.rs  stability.rs  stream.rs  sub_agent_scenario.rs  sub_agent_session.rs  three_layer.rs
crates/marlin-agent-test-support/tests/: unit_test.rs
crates/marlin-deck-runtime-native/: Cargo.toml  build.rs
crates/marlin-gerbil-ir/: BUILD.bazel  Cargo.toml
crates/marlin-gerbil-scheme/: BUILD.bazel  Cargo.toml  README.md  build.rs
crates/marlin-git-utils/: Cargo.toml  build.rs
crates/marlin-org-memory/: BUILD.bazel  Cargo.toml
(+1131 files in other folders)
