[workspace]
members = [
    "build-support/marlin-gerbil-native-build",
    "crates/marlin-agent-core",
    "crates/marlin-agent-environment",
    "crates/marlin-agent-graph",
    "crates/marlin-agent-harness",
    "crates/marlin-agent-harness-types",
    "crates/marlin-agent-hooks",
    "crates/marlin-agent-kernel",
    "crates/marlin-agent-policy-routing-native",
    "crates/marlin-agent-protocol",
    "crates/marlin-agent-route",
    "crates/marlin-agent-runtime",
    "crates/marlin-agent-sessions",
    "crates/marlin-agent-storage",
    "bazel/crate-universe",
    "crates/marlin-agent-stream",
    "crates/marlin-agent-test-support",
    "crates/marlin-deck-runtime-native",
    "crates/marlin-gerbil-ir",
    "crates/marlin-gerbil-scheme",
    "crates/marlin-git-utils",
    "crates/marlin-org-memory",
    "crates/marlin-org-model",
    "crates/marlin-org-patch",
    "crates/marlin-org-store",
    "crates/marlin-org-workflow",
    "crates/marlin-org-workspace",
    "crates/marlin-workspace-patch",
    "crates/marlin-workspace-protocol",
    "crates/marlin-workspace-query",
    "crates/marlin-workspace-status",
    "crates/marlin-workspace-view",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["marlin contributors"]
repository = "https://github.com/tao3k/marlin-agent-core"

[workspace.dependencies]
aho-corasick = "1.1.4"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["json"] }
cc = "1.2.64"
cbindgen = "0.29.4"
criterion = "0.8.2"
gerbil-scheme = { git = "https://github.com/tao3k/gerbil-scheme-rust", rev = "f90e08e191497569fa84d9b96fe9f38443618507", version = "0.1.0" }
gerbil-scheme-build = { git = "https://github.com/tao3k/gerbil-scheme-rust", rev = "f90e08e191497569fa84d9b96fe9f38443618507", version = "0.1.0" }
gerbil-scheme-native-build = { git = "https://github.com/tao3k/gerbil-scheme-rust", rev = "f90e08e191497569fa84d9b96fe9f38443618507", version = "0.1.0" }
futures-executor = "0.3.32"
globset = "0.4.18"
litellm-rs = { version = "0.5", default-features = false, features = ["lite", "gateway", "sqlite", "redis", "websockets"] }
memoffset = "0.9.1"
object = "0.39.1"
orgize = { git = "https://github.com/tao3k/orgize", rev = "9d9ee8c66ccd222bf4379d562deeda514b475875" }
parking_lot = "0.12.5"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
static_assertions = "1.1.0"
tempfile = "3"
turso = { version = "0.7.0-pre.17", default-features = false }
toml = "1.1.2"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5.3", features = ["limit", "load-shed", "timeout", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
wiremock = "0.6.5"
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "124b78e1e43265255e6e761b93f6a5f0048b0c48", version = "0.1.2" }
marlin-rust-project-harness-policy = { path = "build-support/marlin-rust-project-harness-policy", version = "0.1.0" }
marlin-agent-environment = { path = "crates/marlin-agent-environment", version = "0.1.0" }
marlin-agent-graph = { path = "crates/marlin-agent-graph", version = "0.1.0" }
marlin-agent-harness = { path = "crates/marlin-agent-harness", version = "0.1.0" }
marlin-agent-harness-types = { path = "crates/marlin-agent-harness-types", version = "0.1.0" }
marlin-agent-hooks = { path = "crates/marlin-agent-hooks", version = "0.1.0" }
marlin-agent-kernel = { path = "crates/marlin-agent-kernel", version = "0.1.0" }
marlin-agent-policy-routing-native = { path = "crates/marlin-agent-policy-routing-native", version = "0.1.0" }
marlin-agent-protocol = { path = "crates/marlin-agent-protocol", version = "0.1.0" }
marlin-agent-route = { path = "crates/marlin-agent-route", version = "0.1.0" }
marlin-agent-runtime = { path = "crates/marlin-agent-runtime", version = "0.1.0" }
marlin-agent-sessions = { path = "crates/marlin-agent-sessions", version = "0.1.0" }
marlin-agent-storage = { path = "crates/marlin-agent-storage", version = "0.1.0" }
marlin-agent-test-support = { path = "crates/marlin-agent-test-support", version = "0.1.0" }
marlin-gerbil-ir = { path = "crates/marlin-gerbil-ir", version = "0.1.0" }
marlin-gerbil-scheme = { path = "crates/marlin-gerbil-scheme", version = "0.1.0" }
marlin-git-utils = { path = "crates/marlin-git-utils", version = "0.1.0" }
marlin-org-memory = { path = "crates/marlin-org-memory", version = "0.1.0" }
marlin-org-model = { path = "crates/marlin-org-model", version = "0.1.0" }
marlin-org-patch = { path = "crates/marlin-org-patch", version = "0.1.0" }
marlin-org-store = { path = "crates/marlin-org-store", version = "0.1.0" }
marlin-org-workflow = { path = "crates/marlin-org-workflow", version = "0.1.0" }
marlin-org-workspace = { path = "crates/marlin-org-workspace", version = "0.1.0" }
marlin-workspace-patch = { path = "crates/marlin-workspace-patch", version = "0.1.0" }
marlin-workspace-protocol = { path = "crates/marlin-workspace-protocol", version = "0.1.0" }
marlin-workspace-query = { path = "crates/marlin-workspace-query", version = "0.1.0" }
marlin-workspace-status = { path = "crates/marlin-workspace-status", version = "0.1.0" }
marlin-workspace-view = { path = "crates/marlin-workspace-view", version = "0.1.0" }
marlin-gerbil-native-build = { path = "build-support/marlin-gerbil-native-build", version = "0.1.0" }

[profile.release]
# Thin LTO keeps useful cross-crate optimization without the full monolithic
# link cost of fat LTO. This is the right default for CI and open-source
# release builds where rebuild time matters.
opt-level = 3
lto = "thin"
codegen-units = 4
strip = "symbols"
panic = "abort"

[profile.release-fast]
inherits = "release"
# Fast optimized local build: keep opt-level=3 and abort-on-panic, but avoid
# workspace-wide thin LTO when iteration speed matters more than final runtime.
lto = false
codegen-units = 16

[profile.release-max]
inherits = "release"
# Explicit distribution/profile-gated build. Do not make this the default: fat
# LTO and one codegen unit can improve hot-path runtime but are expensive.
lto = "fat"
codegen-units = 1

[profile.release-size]
inherits = "release"
# Size-oriented build for CLI artifacts where startup and distribution footprint
# matter more than peak throughput.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
# Keep release-like codegen while preserving enough symbols for perf/flamegraph
# source attribution. Use with `cargo build --profile profiling`.
debug = "line-tables-only"
strip = "none"

[profile.bench]
debug = "line-tables-only"
strip = "none"

[profile.dev]
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Keep dependency debuginfo out of dev builds. Workspace crates still keep the
# light line-table debug info from [profile.dev], which is enough for useful
# backtraces without paying the full dependency linker cost.
[profile.dev.package."*"]
debug = false

# Build scripts and proc macros run during compilation. A small amount of
# optimization here improves compile-time execution without making cold builds
# expensive.
[profile.dev.build-override]
opt-level = 1
debug = false

# Dev-mode hot paths for this workspace: async runtime, gateway/streaming HTTP,
# Org parsing, graph/query matching, compression, and native artifact scanning.
[profile.dev.package.aho-corasick]
opt-level = 2
[profile.dev.package.axum]
opt-level = 2
[profile.dev.package.bytes]
opt-level = 2
[profile.dev.package.flate2]
opt-level = 2
[profile.dev.package.globset]
opt-level = 2
[profile.dev.package.h2]
opt-level = 2
[profile.dev.package.http]
opt-level = 2
[profile.dev.package.http-body]
opt-level = 2
[profile.dev.package.hyper]
opt-level = 2
[profile.dev.package.litellm-rs]
opt-level = 2
[profile.dev.package.memchr]
opt-level = 2
[profile.dev.package.miniz_oxide]
opt-level = 2
[profile.dev.package.mio]
opt-level = 2
[profile.dev.package.object]
opt-level = 2
[profile.dev.package.orgize]
opt-level = 2
[profile.dev.package.parking_lot]
opt-level = 2
[profile.dev.package.rayon]
opt-level = 2
[profile.dev.package.regex]
opt-level = 2
[profile.dev.package.regex-automata]
opt-level = 2
[profile.dev.package.reqwest]
opt-level = 2
[profile.dev.package.rustls]
opt-level = 2
[profile.dev.package.rustls-native-certs]
opt-level = 2
[profile.dev.package.same-file]
opt-level = 2
[profile.dev.package.serde_json]
opt-level = 2
[profile.dev.package.socket2]
opt-level = 2
[profile.dev.package.tokio]
opt-level = 2
[profile.dev.package.tokio-stream]
opt-level = 2
[profile.dev.package.tokio-util]
opt-level = 2
[profile.dev.package.toml]
opt-level = 2
[profile.dev.package.tower]
opt-level = 2
[profile.dev.package.tracing]
opt-level = 2
[profile.dev.package.tracing-subscriber]
opt-level = 2
[profile.dev.package.walkdir]
opt-level = 2
[profile.dev.package.webpki-roots]
opt-level = 2
[profile.dev.package.zstd]
opt-level = 2
