[package]
name = "marlin-gerbil-native-build"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cc.workspace = true
gerbil-scheme-native-build = { git = "https://github.com/tao3k/gerbil-scheme-rust", rev = "06bd6dc64d2cc3d45c2f376aa9a02375c462d1a7", version = "0.1.0" }
marlin-gerbil-scheme.workspace = true
object.workspace = true
gerbil-scheme-build = { git = "https://github.com/tao3k/gerbil-scheme-rust", rev = "06bd6dc64d2cc3d45c2f376aa9a02375c462d1a7", version = "0.1.0" }

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
