[package]
name = "marlin-gerbil-native-build"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cc.workspace = true
gerbil-scheme-native-build.workspace = true
marlin-gerbil-scheme.workspace = true
object.workspace = true
gerbil-scheme-build.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
