load("//bazel:marlin_crates.bzl", "all_crate_deps", "crate_edition")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("//bazel:marlin_rust.bzl", "marlin_rust_binary", "marlin_rust_crate", "marlin_rust_scenario")

package(default_visibility = ["//visibility:private"])

cargo_build_script(
    name = "policy_build_action",
    srcs = ["build.rs"],
    data = ["Cargo.toml"] + glob([
        "src/**/*.rs",
        "tests/**/*.rs",
    ]),
    edition = crate_edition(),
    deps = all_crate_deps(build = True),
)

marlin_rust_crate(
    name = "marlin_rust_project_harness_policy",
    srcs = glob(["src/**/*.rs"]),
    build_action = "harness",
    build_script = ":policy_build_action",
    crate_root = "src/lib.rs",
    edition = crate_edition(),
    manifest = "Cargo.toml",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

marlin_rust_binary(
    name = "marlin_workspace_package_gate",
    srcs = ["src/bin/marlin-workspace-package-gate.rs"],
    build_action = "harness",
    crate_root = "src/bin/marlin-workspace-package-gate.rs",
    edition = crate_edition(),
    manifest = "Cargo.toml",
    visibility = ["//visibility:public"],
    deps = [":marlin_rust_project_harness_policy"],
)

marlin_rust_scenario(
    name = "unit_test",
    srcs = glob(["tests/**/*.rs"]),
    build_action = "harness",
    crate_root = "tests/unit_test.rs",
    data = ["//:policy_unit_workspace_runtime_data"],
    edition = crate_edition(),
    manifest = "Cargo.toml",
    scenario = "unit",
    visibility = ["//visibility:public"],
    deps = [":marlin_rust_project_harness_policy"] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

filegroup(
    name = "policy_unit_runtime_data",
    srcs = ["Cargo.toml"] + glob(["src/**/*.rs"]),
    visibility = ["//:__pkg__"],
)
