[package]
name = "marlin-rust-project-harness-policy"
edition = "2024"
version = "0.1.0"
authors = ["marlin contributors"]
repository = "https://github.com/tao3k/marlin-agent-core"

[dependencies]
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "9c59588b6ada02d5c2518ca90bc22452155f2e6f", version = "=0.1.2" }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "9c59588b6ada02d5c2518ca90bc22452155f2e6f", version = "=0.1.2" }

[dev-dependencies]
tempfile.workspace = true
