[package]
name = "marlin-rust-project-harness-policy"
edition = "2024"
version = "0.1.0"
authors = ["marlin contributors"]
repository = "https://github.com/tao3k/marlin-agent-core"

[dependencies]
rust-lang-project-harness.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
rust-lang-project-harness.workspace = true

[dev-dependencies]
tempfile.workspace = true
