[package]
name = "marlin-rust-project-harness-policy"
edition = "2024"
version = "0.1.0"
authors = ["marlin contributors"]
repository = "https://github.com/tao3k/marlin-agent-core"

[dependencies]
rust-lang-project-harness = { version = "0.1.2", path = "../../../agent-semantic-protocols/languages/rust-lang-project-harness" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[build-dependencies]
rust-lang-project-harness.workspace = true

[dev-dependencies]
tempfile.workspace = true
