[package]
name = "marlin-agent-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-gerbil-scheme.workspace = true
marlin-agent-environment.workspace = true
marlin-agent-graph.workspace = true
marlin-agent-harness.workspace = true
marlin-agent-hooks.workspace = true
marlin-agent-kernel.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-route.workspace = true
marlin-agent-runtime.workspace = true
marlin-agent-sessions.workspace = true
marlin-gerbil-ir.workspace = true
marlin-org-model.workspace = true
marlin-org-memory.workspace = true
marlin-org-patch.workspace = true
marlin-org-store.workspace = true
marlin-org-workflow.workspace = true
marlin-org-workspace.workspace = true
marlin-workspace-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true

[dev-dependencies]
marlin-agent-test-support.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
