[package]
name = "marlin-agent-environment"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-agent-protocol.workspace = true
thiserror.workspace = true

[build-dependencies]
rust-lang-project-harness.workspace = true

[dev-dependencies]
rust-lang-project-harness.workspace = true
