[package]
name = "marlin-agent-environment"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
marlin-agent-protocol.workspace = true
marlin-git-utils.workspace = true
marlin-workspace-protocol.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
