[package]
name = "marlin-agent-harness"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-agent-kernel.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
marlin-gerbil-ir.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[build-dependencies]
rust-lang-project-harness.workspace = true

[[bench]]
name = "workspace_performance"
harness = false

[dev-dependencies]
marlin-agent-hooks.workspace = true
rust-lang-project-harness.workspace = true
tokio.workspace = true
