[package]
name = "marlin-agent-harness"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-agent-kernel.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
marlin-gerbil-ir.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[[bench]]
name = "workspace_performance"
harness = false

[dev-dependencies]
marlin-agent-hooks.workspace = true
marlin-agent-stream.workspace = true
marlin-agent-test-support.workspace = true
marlin-rust-project-harness-policy.workspace = true
marlin-gerbil-scheme.workspace = true
rust-lang-project-harness.workspace = true
tempfile.workspace = true
tokio.workspace = true
