[package]
name = "marlin-agent-harness"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-agent-kernel.workspace = true
marlin-agent-harness-types.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
marlin-gerbil-ir.workspace = true
marlin-gerbil-scheme = { version = "0.1.0", path = "../marlin-gerbil-scheme" }
serde.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
marlin-agent-hooks.workspace = true
marlin-agent-sessions.workspace = true
marlin-agent-test-support.workspace = true
tempfile.workspace = true
tokio.workspace = true
