[package]
name = "marlin-agent-hooks"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
tokio.workspace = true

[build-dependencies]
rust-lang-project-harness.workspace = true

[dev-dependencies]
rust-lang-project-harness.workspace = true
