[package]
name = "marlin-agent-hooks"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[[bench]]
name = "dynamic_actions"
harness = false

[dependencies]
aho-corasick.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
criterion.workspace = true
