[package]
name = "marlin-agent-kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-agent-hooks.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
tracing.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-stream.workspace = true
