[package]
name = "marlin-agent-policy-routing-native"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
linked-native = []

[[bench]]
name = "linked_selector"
harness = false

[dependencies]
marlin-gerbil-scheme.workspace = true

[dev-dependencies]
criterion.workspace = true
marlin-agent-graph.workspace = true

[build-dependencies]
marlin-gerbil-native-build.workspace = true
