[package]
name = "marlin-agent-policy-routing-native"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
linked-native = []

[[bench]]
name = "linked_selector"
harness = false

[[bench]]
name = "allocation_shape"
harness = false

[dependencies]
marlin-gerbil-scheme.workspace = true

[dev-dependencies]
marlin-rust-project-harness-policy.workspace = true
criterion.workspace = true
marlin-agent-graph.workspace = true
tempfile.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
marlin-gerbil-native-build.workspace = true
